--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "behat/behat": "2.4.*@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7.24"
+        "phpunit/phpunit": "~3.7.24",
+        "satooshi/php-coveralls": "dev-master",
+        "squizlabs/php_codesniffer": "~1.5.0"
     },
     "autoload": {
-        "psr-0": { 
+        "psr-0": {
             "Kpacha\\Helmet": "src",
             "Kpacha\\Tests\\Helmet\\": "tests"
         }
